[gd_scene load_steps=3 format=3 uid="uid://83oqdey3q8oh"]

[ext_resource type="PackedScene" uid="uid://xltnp3wd2u01" path="res://scenes/entities/targeting_system/targeting_system.tscn" id="1_jybga"]
[ext_resource type="Script" path="res://scenes/entities/freeze_ray/freeze_ray.gd" id="1_x8bck"]

[node name="FreezeRay" type="Node2D"]
script = ExtResource("1_x8bck")

[node name="TargetingSystem" parent="." instance=ExtResource("1_jybga")]

[connection signal="target_detected" from="TargetingSystem" to="." method="_on_targeting_system_target_detected"]
[connection signal="target_interacted" from="TargetingSystem" to="." method="_on_targeting_system_target_interacted"]
[connection signal="target_lost" from="TargetingSystem" to="." method="_on_targeting_system_target_lost"]
